<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context=".SignUpPage">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="373dp"
        android:layout_height="125dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="Drinker's logo"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/txtSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/InnerRelativeLayoutEdts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtSignUp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/email"
            android:textColor="@color/neutralDark"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edtTxtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtEmail"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/txtPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtTxtEmail"

            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:text="@string/password"
            android:textColor="@color/neutralDark"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edtTxtPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="textPassword" />

    </RelativeLayout>

    <CheckBox
        android:id="@+id/chkTermsOfService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/InnerRelativeLayoutEdts"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="I agree to the Terms of Service \n and Privacy Policy" />

    <Button
        android:id="@+id/btnContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/chkTermsOfService"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/neutralDark"
        android:text="@string/continue_text"
        android:textColor="@color/white" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnContinue"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/txtAlreadyHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="30dp"
            android:text="Have an account?" />

        <TextView
            android:id="@+id/txtSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_toEndOf="@id/txtAlreadyHaveAccount"
            android:text="@string/sign_in"
            android:textColor="@color/primary" />

    </RelativeLayout>

</RelativeLayout>